--- a/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
+++ b/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
@@ -16,11 +16,14 @@ m365 spo orgassetslibrary add [options]
 `--libraryUrl <libraryUrl>`
 : The URL of the library to promote.
 
-`--thumbnailUrl <thumbnailUrl>`
+`--thumbnailUrl [thumbnailUrl]`
 : The URL of the thumbnail to render.
 
 `--cdnType [cdnType]`
 : Specifies the CDN type. Allowed values `Public`, `Private`. Default `Private`.
+
+`--orgAssetType [orgAssetType]`
+: Specifies the type of organizational library. Allowed values `ImageDocumentLibrary`, `OfficeTemplateLibrary`, `OfficeFontLibrary`. Defaults to `ImageDocumentLibrary`.
 ```
 
 <Global />
@@ -32,6 +35,10 @@ m365 spo orgassetslibrary add [options]
 To use this command you have to have permissions to access the tenant admin site.
 
 :::
+
+To enable CDN in your tenant use the [spo cdn set](../cdn/cdn-set.mdx) command.
+
+The document library on which you run the command must at least have read permissions for all users, except external users.
 
 ## Examples
 
@@ -45,6 +52,12 @@ Promotes an existing library to become an organization assets library with Thumb
 
 ```sh
 m365 spo orgassetslibrary --libraryUrl "https://contoso.sharepoint.com/SiteAssets" --thumbnailUrl "https://contoso.sharepoint.com/assets/logo.png"
+```
+
+Promotes an existing library to become an organization assets Office template library
+
+```sh
+m365 spo orgassetslibrary add --libraryUrl "https://contoso.sharepoint.com/SiteAssets" --orgAssetType "OfficeTemplateLibrary"
 ```
 
 ## Response
