--- a/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
+++ b/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
@@ -16,7 +16,7 @@ m365 spo orgassetslibrary add [options]
 `--libraryUrl <libraryUrl>`
 : The URL of the library to promote.
 
-`--thumbnailUrl <thumbnailUrl>`
+`--thumbnailUrl [thumbnailUrl]`
 : The URL of the thumbnail to render.
 
 `--cdnType [cdnType]`
@@ -36,6 +36,11 @@ To use this command you have to have permissions to access the tenant admin site
 
 :::
 
+!!! important
+    In order to use this command, it is necessary to have the CDN feature enabled on the tenant. You can do this with the [m365 spo cdn set command](../cdn/cdn-policy-set.md).
+
+!!! important
+    The document library on which you run the command must at least have read permissions for all users, except external users 
 ## Examples
 
 Promotes an existing library to become an organization assets library
