--- a/docs/docs/cmd/aad/user/user-get.mdx
+++ b/docs/docs/cmd/aad/user/user-get.mdx
@@ -25,7 +25,10 @@ m365 aad user get [options]
 : The email of the user to retrieve information for. Use either `id`, `userName` or `email`, but not all.
 
 `-p, --properties [properties]`
-: Comma-separated list of properties to retrieve
+: Comma-separated list of properties to retrieve.
+
+`--withManager`
+: Retrieve the direct manager of the user.
 ```
 
 <Global />
@@ -74,24 +77,32 @@ Get information about the currently logged in user using the UserName token
 m365 aad user get --userName "@meUserName"
 ```
 
+Get information about a user with the manager's details
+
+```sh
+m365 aad user get --userName AarifS@contoso.onmicrosoft.com --withManager
+```
+
 ## Response
+
+### Standard response
 
 <Tabs>
   <TabItem value="JSON">
 
   ```json
   {
-    "businessPhones": [],
+    "businessPhones": ["+32499-99-99-99"],
     "displayName": "John Doe",
-    "givenName": null,
-    "jobTitle": null,
-    "mail": null,
-    "mobilePhone": null,
-    "officeLocation": null,
-    "preferredLanguage": null,
-    "surname": null,
+    "givenName": "John",
+    "jobTitle": "Sales Manager",
+    "mail": "john.doe@contoso.com",
+    "mobilePhone": "+32499-99-99-99",
+    "officeLocation": "Vosselaar",
+    "preferredLanguage": "nl-BE",
+    "surname": "Doe",
     "userPrincipalName": "john.doe@contoso.com",
-    "id": "74a3b772-3122-447b-b9da-10895e238219"
+    "id": "990e2425-f595-43bc-85ed-b89a44093793"
   }
   ```
 
@@ -99,16 +110,16 @@ m365 aad user get --userName "@meUserName"
   <TabItem value="Text">
 
   ```text
-  businessPhones   : []
+  businessPhones   : ["+32499-99-99-99"]
   displayName      : John Doe
-  givenName        : null
-  id               : 74a3b772-3122-447b-b9da-10895e238219
-  jobTitle         : null
-  mail             : null
-  mobilePhone      : null
-  officeLocation   : null
-  preferredLanguage: null
-  surname          : null
+  givenName        : John
+  id               : 990e2425-f595-43bc-85ed-b89a44093793
+  jobTitle         : Sales Manager
+  mail             : john.doe@contoso.com
+  mobilePhone      : +32499-99-99-99
+  officeLocation   : Vosselaar
+  preferredLanguage: nl-BE
+  surname          : Doe
   userPrincipalName: john.doe@contoso.com
   ```
 
@@ -116,15 +127,15 @@ m365 aad user get --userName "@meUserName"
   <TabItem value="CSV">
 
   ```csv
-  displayName,userPrincipalName,id
-  John Doe,john.doe@contoso.com,74a3b772-3122-447b-b9da-10895e238219
+  displayName,givenName,jobTitle,mail,mobilePhone,officeLocation,preferredLanguage,surname,userPrincipalName,id
+  John Doe,John,Sales Manager,john.doe@contoso.com,+32499-99-99-99,Vosselaar,nl-BE,Doe,john.doe@contoso.com,990e2425-f595-43bc-85ed-b89a44093793
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
   ```md
-  # aad user get --displayName "John Doe" --userName "john.doe@contoso.com" --password "SomePassw0rd" --firstName "John" --lastName "Doe" --jobTitle "Sales Manager" --officeLocation "Vosselaar" --preferredLanguage "nl-BE"
+  # aad user get --userName "john.doe@contoso.com"
 
   Date: 16/02/2023
 
@@ -135,13 +146,95 @@ m365 aad user get --userName "@meUserName"
   displayName | John Doe
   givenName | John
   jobTitle | Sales Manager
-  mail | null
-  mobilePhone | null
+  mail | john.doe@contoso.com
+  mobilePhone | +32499-99-99-99
   officeLocation | Vosselaar
   preferredLanguage | nl-BE
   surname | Doe
   userPrincipalName | john.doe@contoso.com
-  id | 0649d0bd-53dc-4e1d-a357-76f1d92d447b
+  id | 990e2425-f595-43bc-85ed-b89a44093793
+  ```
+
+  </TabItem>
+</Tabs>
+
+### `withManager` response
+
+When we make use of the option `withManager` the response will differ. 
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  {
+    "businessPhones": ["+32499-99-99-99"],
+    "displayName": "John Doe",
+    "givenName": "John",
+    "jobTitle": "Sales Manager",
+    "mail": "john.doe@contoso.com",
+    "mobilePhone": "+32499-99-99-99",
+    "officeLocation": "Vosselaar",
+    "preferredLanguage": "nl-BE",
+    "surname": "Doe",
+    "userPrincipalName": "john.doe@contoso.com",
+    "id": "990e2425-f595-43bc-85ed-b89a44093793",
+    "manager": {
+      "displayName": "Jane Doe",
+      "userPrincipalName": "jane.doe@contoso.com",
+      "id": "eb77fbcf-6fe8-458b-985d-1747284793bc",
+      "mail": "jane.doe@contoso.com"
+    }
+  }
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```text
+  businessPhones   : ["+32499-99-99-99"]
+  displayName      : John Doe
+  givenName        : John
+  id               : 990e2425-f595-43bc-85ed-b89a44093793
+  jobTitle         : Sales Manager
+  mail             : john.doe@contoso.com
+  manager          : {"displayName":"Jane Doe","userPrincipalName":"jane.doe@contoso.com","id":"eb77fbcf-6fe8-458b-985d-1747284793bc","mail":"jane.doe@contoso.com"}
+  mobilePhone      : +32499-99-99-99
+  officeLocation   : Vosselaar
+  preferredLanguage: nl-BE
+  surname          : Doe
+  userPrincipalName: john.doe@contoso.com
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  displayName,givenName,jobTitle,mail,mobilePhone,officeLocation,preferredLanguage,surname,userPrincipalName,id
+  John Doe,John,Sales Manager,john.doe@contoso.com,+32499-99-99-99,Vosselaar,nl-BE,Doe,john.doe@contoso.com,990e2425-f595-43bc-85ed-b89a44093793
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  # aad user get --userName "john.doe@contoso.com" --withManager
+
+  Date: 16/02/2023
+
+  ## John Doe (990e2425-f595-43bc-85ed-b89a44093793)
+
+  Property | Value
+  ---------|-------
+  displayName | John Doe
+  givenName | John
+  jobTitle | Sales Manager
+  mail | john.doe@contoso.com
+  mobilePhone | +32499-99-99-99
+  officeLocation | Vosselaar
+  preferredLanguage | nl-BE
+  surname | Doe
+  userPrincipalName | john.doe@contoso.com
+  id | 990e2425-f595-43bc-85ed-b89a44093793
   ```
 
   </TabItem>
