--- a/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
+++ b/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
@@ -22,9 +22,8 @@ m365 spo orgassetslibrary add [options]
 `--cdnType [cdnType]`
 : Specifies the CDN type. Allowed values `Public`, `Private`. Default `Private`.
 
-`-o, --orgAssetType [orgAssetType]`
-: Specifies the OrgAssets type. Allowed values `ImageDocumentLibrary`, `OfficeTemplateLibrary`, `OfficeFontLibrary`. Defaults to `ImageDocumentLibrary`.
-```
+`--orgAssetType [orgAssetType]`
+: Specifies the type of organizational library. Allowed values `ImageDocumentLibrary`, `OfficeTemplateLibrary`, `OfficeFontLibrary`. Defaults to `ImageDocumentLibrary`.
 
 <Global />
 
@@ -36,11 +35,10 @@ To use this command you have to have permissions to access the tenant admin site
 
 :::
 
-!!! important
-    In order to use this command, it is necessary to have the CDN feature enabled on the tenant. You can do this with the [m365 spo cdn set command](../cdn/cdn-policy-set.md).
+    To enable CDN in your tenant use the [spo cdn set](../cdn/cdn-set.md) command.
 
-!!! important
-    The document library on which you run the command must at least have read permissions for all users, except external users 
+    The document library on which you run the command must at least have read permissions for all users, except external users.
+
 ## Examples
 
 Promotes an existing library to become an organization assets library
