--- a/docs/docs/user-guide/using-proxy-url.mdx
+++ b/docs/docs/user-guide/using-proxy-url.mdx
@@ -1,3 +1,8 @@
+---
+title: Use proxy url
+sidebar_position: 15
+---
+
 # Configure CLI for Microsoft 365 to use a proxy
 
 If you are behind a corporate proxy, you'll have to configure CLI for Microsoft 365 to use a proxy server to access Microsoft 365 services. You can configure a proxy URL using the [cli config set](/docs/docs/cmd/cli/config/config-set.mdx) command.
@@ -15,8 +20,9 @@ Before configuring the proxy, it's important to understand the different parts o
 
 To configure CLI for Microsoft 365 to use a proxy, you need to execute the `m365 cli config set` command with the following syntax:
 
-`m365 cli config set --key proxyUrl --value 'http://username:password@proxy.contoso.com:8080'`
-
+```sh
+m365 cli config set --key proxyUrl --value 'http://username:password@proxy.contoso.com:8080'`
+```
 Here, replace `username` and `password` with your credentials, `proxy.contoso.com` with the hostname or IP address of the proxy server, and `8080` with the port number used by the proxy server.
 
 If your proxy server doesn't require authentication, you can omit the `username:password@` part from the URL:
