--- a/docs/docs/user-guide/using-proxy-url.mdx
+++ b/docs/docs/user-guide/using-proxy-url.mdx
@@ -5,7 +5,7 @@ sidebar_position: 15
 
 # Configure CLI for Microsoft 365 to use a proxy
 
-If you are behind a corporate proxy, you'll have to configure CLI for Microsoft 365 to use a proxy server to access Microsoft 365 services. You can configure a proxy URL using the [cli config set](/docs/docs/cmd/cli/config/config-set.mdx) command.
+If you are behind a corporate proxy, you'll have to configure CLI for Microsoft 365 to use a proxy server to access Microsoft 365 services. You can configure a proxy URL using the [cli config set](../cmd/cli/config/config-set.mdx) command.
 
 ## Understanding Proxy URL
 
