this doesn't even make sense

--- a/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
+++ b/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
@@ -35,7 +35,7 @@ To use this command you have to have permissions to access the tenant admin site
 
 :::
 
-    To enable CDN in your tenant use the [spo cdn set](./../../../cmd/spo//cdn/cdn-set.mdx) command.
+    To enable CDN in your tenant use the [spo cdn set](./../../../cli-microsoft365/docs/docs/cmd/spo//cdn/cdn-set.mdx) command.
 
     The document library on which you run the command must at least have read permissions for all users, except external users.
 
