--- a/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
+++ b/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-add.mdx
@@ -24,6 +24,7 @@ m365 spo orgassetslibrary add [options]
 
 `--orgAssetType [orgAssetType]`
 : Specifies the type of organizational library. Allowed values `ImageDocumentLibrary`, `OfficeTemplateLibrary`, `OfficeFontLibrary`. Defaults to `ImageDocumentLibrary`.
+```
 
 <Global />
 
@@ -35,9 +36,9 @@ To use this command you have to have permissions to access the tenant admin site
 
 :::
 
-    To enable CDN in your tenant use the [spo cdn set](./../../../cli-microsoft365/docs/docs/cmd/spo/cdn/cdn-set.mdx) command.
+To enable CDN in your tenant use the [spo cdn set](../cdn/cdn-set.mdx) command.
 
-    The document library on which you run the command must at least have read permissions for all users, except external users.
+The document library on which you run the command must at least have read permissions for all users, except external users.
 
 ## Examples
 
