Include response output: spo site until spo theme commands. Closes #3933

--- a/docs/docs/cmd/spo/tenant/tenant-settings-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-settings-set.mdx
@@ -311,3 +311,8 @@ Disable comments on list items for SharePoint and Microsoft Lists
 ```sh
 m365 spo tenant settings set --CommentsOnListItemsDisabled true
 ```
+
+```
+## Response
+
+The command won't return a response on success.
