--- a/docs/docs/cmd/spo/site/site-set.mdx
+++ b/docs/docs/cmd/spo/site/site-set.mdx
@@ -180,3 +180,7 @@ Lock the site preventing users from accessing it. Wait for the configuration to 
 ```sh
 m365 spo site set --url https://contoso.sharepoint.com/sites/team --LockState NoAccess --wait
 ```
+
+## Response
+
+The command won't return a response on success.
