Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -115,6 +115,9 @@ sidebar_position: 4
 - refactored to async/await `base commands`. [#4957](https://github.com/pnp/cli-microsoft365/issues/4957)
 - refactored to async/await `m365 spo customaction`, `m365 spo commandset`. [#5021](https://github.com/pnp/cli-microsoft365/issues/5021)
 - refactored to async/await - `m365 spo contenttype`, `m365 spo contenttypehub`. [#5022](https://github.com/pnp/cli-microsoft365/issues/5022)
+- extended 'spfx project upgrade' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
+- extended 'spfx doctor' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
+- extended 'spfx project doctor' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
 
 ## [v6.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.8.0)
 
