--- a/docs/docs/sample-scripts/spo/add-app-catalog/index.mdx
+++ b/docs/docs/sample-scripts/spo/add-app-catalog/index.mdx
@@ -19,7 +19,7 @@ When you just want to deploy certain SharePoint solution to a specific site, it'
   ```powershell
   $site = "https://contoso.sharepoint.com/sites/site"
   m365 login
-  m365 spo site appcatalog add --siteUrl $site
+  m365 spo site appcatalog add --url $site
   Write-output "App Catalog Created on " $site
   ```
 
@@ -32,7 +32,7 @@ When you just want to deploy certain SharePoint solution to a specific site, it'
   site=https://tricks365.sharepoint.com/sites/site
 
   m365 login
-  m365 spo site appcatalog add --siteUrl $site
+  m365 spo site appcatalog add --url $site
   echo "App Catalog Created on $site"
   ```
 
