--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -112,9 +112,9 @@ sidebar_position: 4
 - refactored codebase to async/await - commands 'tenant serviceannouncement healthissue get' until 'todo task add'. [#5115](https://github.com/pnp/cli-microsoft365/issues/5115)
 - refactored codebase to async/await - commands 'teams app', 'teams cache', 'teams funsettings'. [#5088](https://github.com/pnp/cli-microsoft365/issues/5088)
 - updated 'spo tenant settings set' documentation. [#4979](https://github.com/pnp/cli-microsoft365/issues/4979)
-- refactored to async/await `base commands`. [#4957](https://github.com/pnp/cli-microsoft365/issues/4957)
-- refactored to async/await `m365 spo customaction`, `m365 spo commandset`. [#5021](https://github.com/pnp/cli-microsoft365/issues/5021)
-- refactored to async/await - `m365 spo contenttype`, `m365 spo contenttypehub`. [#5022](https://github.com/pnp/cli-microsoft365/issues/5022)
+- refactored codebase to async/await - commands 'base commands'. [#4957](https://github.com/pnp/cli-microsoft365/issues/4957)
+- refactored codebase to async/await - commands 'm365 spo customaction', 'm365 spo commandset'. [#5021](https://github.com/pnp/cli-microsoft365/issues/5021)
+- refactored codebase to async/await - commands 'm365 spo contenttype', 'm365 spo contenttypehub'. [#5022](https://github.com/pnp/cli-microsoft365/issues/5022)
 - extended 'spfx project upgrade' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
 - extended 'spfx doctor' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
 - extended 'spfx project doctor' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
