--- a/docs/docs/cmd/spo/tenant/tenant-commandset-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-add.mdx
@@ -14,7 +14,7 @@ m365 spo tenant commandset add [options]
 
 ## Options
 
-```md defintion-list
+```md definition-list
 `-t, --title <title>`
 : The title of the ListView Command Set.
 
