--- a/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
@@ -14,7 +14,7 @@ spo tenant commandset get [options]
 
 ## Options
 
-```md defintion-list
+```md definition-list
 `-t, --title [title]`
 : The title of the ListView Command Set. Specify either `title`, `id`, or `clientSideComponentId`.
 
