--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-set.mdx
@@ -14,13 +14,13 @@ m365 spo tenant applicationcustomizer set [options]
 
 ```md definition-list
 `-t, --title [title]`
-: The title of the Application Customizer to update. Specify either `title`, `id`, or `clientSideComponentId`.
+: The title of the Application Customizer to update. Specify either `title`, `id` or `clientSideComponentId`.
 
 `-i, --id [id]`
-: The id of the Application Customizer to update. Specify either `title`, `id`, or `clientSideComponentId`.
+: The id of the Application Customizer to update. Specify either `title`, `id` or `clientSideComponentId`.
 
 `-c, --clientSideComponentId  [clientSideComponentId]`
-: The Client Side Component Id (GUID) of the Application Customizer to update. Specify either `title`, `id`, or `clientSideComponentId`.
+: The Client Side Component Id (GUID) of the Application Customizer to update. Specify either `title`, `id` or `clientSideComponentId`.
 
 `--newTitle [newTitle]`
 : The updated title of the Application Customizer.
