--- a/docs/docs/cmd/cli/config/config-list.mdx
+++ b/docs/docs/cmd/cli/config/config-list.mdx
@@ -18,7 +18,7 @@ m365 cli config list [options]
 
 ## Remarks
 
-Add Available Settings in the docs for the command, example: [cli config get](./config-get.mdx).
+You can get the available settings with the `m365 cli config get` command, see [cli config get](./config-get.mdx) for more information.
 
 ## Examples
 
@@ -30,34 +30,43 @@ m365 cli config list
 
 ## Response
 
-When retrieving the self set CLI for Microsoft 365 configurations, responses will look like this:
+The response below is an example, this may change depending on the configuration you have set
 
 <Tabs>
   <TabItem value="JSON">
 
   ```json
-  "json"
+  {
+    "errorOutput": "stdout"
+  }
   ```
 
   </TabItem>
   <TabItem value="Text">
 
   ```text
-  json
+  errorOutput: stdout
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  json
+  errorOutput
+  stdout
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
   ```md
-  json
+  # cli config list
+
+  Date: 29/6/2023
+
+  Property | Value
+  ---------|-------
+  errorOutput | stdout
   ```
 
   </TabItem>
