Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -118,6 +118,7 @@ sidebar_position: 4
 - extended 'spfx project upgrade' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
 - extended 'spfx doctor' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
 - extended 'spfx project doctor' with support for 1.17.3 [#5054](https://github.com/pnp/cli-microsoft365/issues/5054)
+- added support for SPFx v1.17.4 [#5164](https://github.com/pnp/cli-microsoft365/issues/5164)
 
 ## [v6.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.8.0)
 
