--- a/docs/docs/cmd/spo/file/file-list.mdx
+++ b/docs/docs/cmd/spo/file/file-list.mdx
@@ -16,22 +16,19 @@ m365 spo file list [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: The URL of the site where the folder from which to retrieve files is located
+: The URL of the site where the folder from which to retrieve files is located.
 
 `-f, --folderUrl <folderUrl>`
-: The server- or site-relative URL of the parent folder from which to retrieve files
-
-`-f, --folder <folder>`
-: (deprecated. Use `folderUrl` instead) The server- or site-relative URL of the folder from which to retrieve files
+: The server- or site-relative URL of the parent folder from which to retrieve files.
 
 `--fields [fields]`
 : Comma-separated list of fields to retrieve. Will retrieve all fields if not specified.
 
 `--filter [filter]`
-: OData filter to use to query the list of items with
+: OData filter to use to query the list of items with.
 
 `-r, --recursive`
-: Set to retrieve files from subfolders
+: Set to retrieve files from subfolders.
 ```
 
 <Global />
@@ -135,4 +132,3 @@ m365 spo file list --webUrl https://contoso.sharepoint.com/sites/project-x --fol
 
   </TabItem>
 </Tabs>
-
