Change docs to Docusaurus

--- a/docs/docs/contribute/contributing-guide.mdx
+++ b/docs/docs/contribute/contributing-guide.mdx
@@ -37,21 +37,21 @@ Typos are embarrassing! Most PRs that fix typos will be accepted immediately. To
 
 ## Contribution Paths
 
-Before you start contributing, it's important to ensure that your environment is set up correctly. You can refer to the extensive guide on how to achieve this: [Setting up your environment](./environment-setup.md).
+Before you start contributing, it's important to ensure that your environment is set up correctly. You can refer to the extensive guide on how to achieve this: [Setting up your environment](./environment-setup.mdx).
 
 ### Adding a New Command
 
 Once your environment is set up, you can learn how to add a new command to the CLI for Microsoft 365 by following these steps:
 
-1. [New Command Sample](./new-command/step-by-step-guide.md)
-2. [Command Logic](./new-command/build-command-logic.md)
-3. [Unit Tests](./new-command/unit-tests.md)
-4. [Help Page](./new-command/writing-the-docs.md)
-5. [Submitting the Pull Request (PR)](./creating-the-pr.md)
+1. [New Command Sample](./new-command/step-by-step-guide.mdx)
+2. [Command Logic](./new-command/build-command-logic.mdx)
+3. [Unit Tests](./new-command/unit-tests.mdx)
+4. [Help Page](./new-command/writing-the-docs.mdx)
+5. [Submitting the Pull Request (PR)](./creating-the-pr.mdx)
 
 ### Adding a New Script Sample
 
 Explore the process of adding a new script sample to the CLI for Microsoft 365 with the following steps:
 
-1. [Adding a Script Sample](./script-sample/new-script-sample.md)
-2. [Submitting the Pull Request (PR)](./creating-the-pr.md)
+1. [Adding a Script Sample](./script-sample/new-script-sample.mdx)
+2. [Submitting the Pull Request (PR)](./creating-the-pr.mdx)
