--- a/docs/docs/contribute/creating-the-pr.mdx
+++ b/docs/docs/contribute/creating-the-pr.mdx
@@ -4,9 +4,11 @@
 
 Once you have everything created and your code/script sample is fully functional, you can proceed with creating a pull request (PR) to the CLI for Microsoft 365 repository to include your changes in the next release. Before submitting the PR, ensure that you have tested your code locally and that your tests provide 100% code coverage.
 
-!!! important
+:::info
 
-    All git commands should be executed from the root of your locally cloned fork.
+All git commands should be executed from the root of your locally cloned fork.
+
+:::
 
 If this is your first PR, make sure you have created a link to the upstream repository of the [CLI for Microsoft 365](https://github.com/pnp/cli-microsoft365).
 
@@ -66,4 +68,4 @@ Once you have filled in all the necessary details, click on the `Create pull req
 
 ## What Happens Next?
 
-Once your hard work is submitted then it's up to us. One of the CLI for Microsoft 365 maintainers will review your PR and provide feedback if necessary. If everything looks good, your PR will be merged into the main branch and will be included in the next release of the CLI for Microsoft 365. To get some more insight into what happens during this process, check out the [What to expect during a Pull request review](./expect-during-PR.md).
+Once your hard work is submitted then it's up to us. One of the CLI for Microsoft 365 maintainers will review your PR and provide feedback if necessary. If everything looks good, your PR will be merged into the main branch and will be included in the next release of the CLI for Microsoft 365. To get some more insight into what happens during this process, check out the [What to expect during a Pull request review](./expect-during-pr.mdx). 
