--- a/docs/docs/contribute/new-command/step-by-step-guide.mdx
+++ b/docs/docs/contribute/new-command/step-by-step-guide.mdx
@@ -2,9 +2,11 @@
 
 Awesome! Good ideas are invaluable for every product.
 
-!!! note
+:::note
 
-    Before you start hacking away, please check if there is no similar idea already listed in the [issue list](https://github.com/pnp/cli-microsoft365/issues). If not, please create a new issue describing your idea.
+Before you start hacking away, please check if there is no similar idea already listed in the [issue list](https://github.com/pnp/cli-microsoft365/issues). If not, please create a new issue describing your idea.
+
+:::
 
 Once we agree on the feature scope and architecture, the feature will be ready for building. Don't hesitate to mention this in the issue if you'd like to build the feature yourself. When you start creating a new command, you will need to write the command logic, unit tests, and documentation. Here's a detailed guide on how to create a new command from scratch.
 
@@ -61,4 +63,4 @@ m365 spo group get --webUrl https://contoso.sharepoint.com/sites/project-x --ass
 
 ## Next Step
 
-With the sample command specs `m365 spo group get` in mind, we will now move on to the next step, which is building the command logic. Please refer to the following link for detailed instructions: [Command Logic](./build-command-logic.md).
+With the sample command specs `m365 spo group get` in mind, we will now move on to the next step, which is building the command logic. Please refer to the following link for detailed instructions: [Command Logic](./build-command-logic.mdx).
