--- a/docs/docs/contribute/script-sample/new-script-sample.mdx
+++ b/docs/docs/contribute/script-sample/new-script-sample.mdx
@@ -13,40 +13,42 @@ my-new-sample/
 ├─ assets/
 │  ├─ preview.png
 │  ├─ sample.json
-├─ index.md
+├─ index.mdx
 ```
 
 - assets/sample.json - this file has additional metadata about the sample that is needed to properly synchronize the sample to the Microsoft Sample Solution Gallery. 
 - assets/preview.png - this image will be shown as the sample preview in the Microsoft Sample Solution Gallery. This could present the result of the script sample (e.g. if your script adds list items to a SharePoint list, the preview image could show a screen of the populated list). 
-- index.md - this is the main file that contains the sample title, description, author, tags, and the script (or scripts if the sample was developed in multiple technologies/languages) 
+- index.mdx - this is the main file that contains the sample title, description, author, tags, and the script (or scripts if the sample was developed in multiple technologies/languages) 
 
 ## Sample.json (sample metadata)
 
 This file is needed to properly display the sample on the Microsoft Sample Solution Gallery. Please use the template below with information on how to fill in the file. 
 
-!!! important
+:::info
 
-    All places marked with `<>` should be populated accordingly.
+All places marked with `<>` should be populated accordingly.
+
+:::
 
 ```json title="assets/sample.json"
 [
   {
     "name": "pnp-<Same as folder name e.g. pnp-disable-tenant-wide-extension>",
     "source": "pnp",
-    "title": "<Same as sample title in the index.md file e.g. Disable specified Tenant-wide Extension>",
+    "title": "<Same as sample title in the index.mdx file e.g. Disable specified Tenant-wide Extension>",
     "url": "<Url to the sample on the CLI for Microsoft 365 docs page e.g. https://pnp.github.io/cli-microsoft365/sample-scripts/spo/disable-tenant-wide-extension>",
     "creationDateTime": "<Date when the sample was first created>",
     "updateDateTime": "<Date of the last update of the sample file>",
     "shortDescription": "<Short one-liner description of the sample main goal or functionality>",
     "longDescription": [
-      "<Long and detailed description of the sample. Should be similar to the one used in the index.md file>"
+      "<Long and detailed description of the sample. Should be similar to the one used in the index.mdx file>"
     ],
     "products": [
       "<Name of the Microsoft 365 product this sample interacts with e.g. SharePoint>"
     ],
     "categories": [],
     "tags": [
-      "<Collection of tags related to the sample. Should be the same list as defined in the index.md file. e.g. provisioning, libraries>"
+      "<Collection of tags related to the sample. Should be the same list as defined in the index.mdx file. e.g. provisioning, libraries>"
     ],
     "metadata": [
       {
@@ -84,7 +86,7 @@ This file is needed to properly display the sample on the Microsoft Sample Solut
 
 The sample file should contain a title, a short description, an author, tags, and the script in code blocks. To help you get started you may use the template below.
 
-```md title="index.md"
+```md title="index.mdx"
 ---
 tags:
   - provisioning
@@ -109,3 +111,7 @@ Short description of the sample functionality.
     # CLI for Microsoft 365 script
     ```
 ```
+
+## Next Step
+
+With your sample script ready. The next step is to submit your local code to the CLI for Microsoft 365 repository. This is explained in the next chapter, creating the PR: [Submitting the Pull Request (PR)](../creating-the-pr.mdx).
