'm365 spo site ensure' not working as expected. Closes #5155. Additionally, fixes site-set classification and disableFlows issues.

--- a/docs/docs/cmd/spo/site/site-ensure.mdx
+++ b/docs/docs/cmd/spo/site/site-ensure.mdx
@@ -103,7 +103,7 @@ If you set the type to `ClassicSite`, you should also set a value of the `webTem
 Ensure that a site exists at the specified URL. Create a modern team site if no site exists. If a site is found, don't check its type and update its title.
 
 ```sh
-m365 spo site ensure --url https://contoso.sharepoint.com/sites/team1 --alias team1 --title "Team 1"
+m365 spo site ensure --url https://contoso.sharepoint.com/teams/team1 --alias team1 --title "Team 1"
 ```
 
 Ensure that a communication site exists at the specified URL. Create a communication site if no site exists. If a site of different type is found, return an error.
